--- a/prj.conf
+++ b/prj.conf
@@ -1,7 +1,15 @@
 CONFIG_GPIO=y
+CONFIG_I2C=y
+CONFIG_SENSOR=y
+CONFIG_LIS2DH=y
+CONFIG_LIS2DH_TRIGGER_NONE=y
+CONFIG_LIS2DH_ACCEL_RANGE_4G=y
+CONFIG_LIS2DH_OPER_MODE_HIGH_RES=y
+CONFIG_LIS2DH_ODR_7=y
 # enable c++ support
 CONFIG_CPLUSPLUS=y
 CONFIG_LIB_CPLUSPLUS=y
+CONFIG_STDOUT_CONSOLE=y
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_FPU=y
@@ -9,4 +17,3 @@ CONFIG_FPU=y
 CONFIG_MAIN_STACK_SIZE=8192
 CONFIG_CONSOLE_SUBSYS=y
 CONFIG_CONSOLE_GETLINE=y
-
